WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303488
Fix the Catalyst build after recent changes in UIFoundation (
rdar://164301290
)
https://bugs.webkit.org/show_bug.cgi?id=303488
Summary
Fix the Catalyst build after recent changes in UIFoundation (rdar://164301290)
Wenson Hsieh
Reported
2025-12-03 10:34:21 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-03 10:34:27 PST
<
rdar://problem/165774936
>
Wenson Hsieh
Comment 2
2025-12-03 11:09:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54789
EWS
Comment 3
2025-12-03 13:50:49 PST
Committed
303862@main
(ea64ba9374c3): <
https://commits.webkit.org/303862@main
> Reviewed commits have been landed. Closing PR #54789 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug